# note_categorizer

./: .mdl_ruleset.rb  .pre-commit-config.yaml  Makefile  README.md  category_file.txt  example_notes.txt  note_file.txt  pyproject.toml
deploy/: README.md  deploy_service.sh
deploy/deploy_scripts/: de-elevate_privileges.sh  get_venv_path.sh  load_service_file.sh  setup_venv.sh
deploy/usr/lib/systemd/sysconfig/: note-categorizer-web-app-env
deploy/usr/lib/systemd/user/: note-categorizer-web-app.service
note_categorizer/: __init__.py  main.py
note_categorizer/categorizer/: __init__.py  main.py  parser.py  text_file_reader.py
note_categorizer/categorizer/tests/: __init__.py  test_parser.py
note_categorizer/common/: __init__.py  category.py  common_utils.py  notes.py
note_categorizer/common/tests/: __init__.py  test_category.py
note_categorizer/web_app/: __init__.py  cli_parser.py  constants.py  main.py  server.py  web_utils.py
note_categorizer/web_app/frontend/static/js/: homepage.js  navbar.js  utils.js
note_categorizer/web_app/frontend/templates/: base.html  homepage.html
