

[tool.poetry]
name = "Note Categorizer"
version = "0.1.0"
description = "Note categorizer Web-App Project"
authors = ["Matthew Rizzo <mattrizzo21@gmail.com>"]
license = "GNU GPLv3"

packages = [{include = "note_categorizer"}]

[tool.poetry.dependencies]
python = "^3.10"
mattrizzo-devops = {git = "https://github.com/MatthewRizzo/mattrizzo_devops"}
marshmallow = "^3.19.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"

[tool.pytest.ini_options]
addopts = "--cov --cov-report html --cov-report term-missing --cov-fail-under 80"

[tool.coverage.run]
source = ["note_categorizer"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
